# minesweeper

./: .gitignore  .rustfmt.toml  .taurignore  .typos.toml  Cargo.toml  Main.hs  Makefile  MineSweeper.hs  README.MD  cargo-sources.json  io.github.darrellroberts.minesweeper.yml  minesweeper-game.cabal  readme.md
.github/workflows/: release.yml
assets/: Info.plist  io.github.darrellroberts.minesweeper.desktop  io.github.darrellroberts.minesweeper.metainfo.xml
minesweeper/: Cargo.toml  readme.md
minesweeper-gui/: Cargo.toml  README.md
minesweeper-gui/src/: lib.rs  main.rs  status_dialog.rs  style.css  widgets.rs
minesweeper-gui/src/components/: app.rs  history.rs  mod.rs  positions.rs  status_dialog.rs  timer.rs
minesweeper-iced/: Cargo.toml  readme.md
minesweeper-iced/examples/: gradient_shadow.rs
minesweeper-iced/src/: lib.rs  main.rs  modal.rs  theme.rs  views.rs
minesweeper-iced/src/components/: cell.rs  header.rs  mod.rs  scoreboard.rs
minesweeper-iced/src/views/: cell.rs  header.rs  mod.rs  scoreboard.rs
minesweeper-iced/src/widgets/: cell_button.rs  mod.rs  modal.rs
minesweeper-relm4/: Cargo.toml  README.md
minesweeper-relm4/src/: lib.rs  main.rs  status_dialog.rs  style.css  types.rs
minesweeper-relm4/src/components/: app.rs  history.rs  mod.rs  positions.rs  status_dialog.rs  timer.rs
minesweeper-tauri/: Cargo.toml  readme.md  tauri.conf.json
minesweeper-tauri/capabilities/: migrated.json
minesweeper-tauri/icons/: icon.icns
minesweeper-tauri/src/: commands.rs  game.rs  history.rs  lib.rs  main.rs
minesweeper-tauri/vite-minesweeper/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
minesweeper-tauri/vite-minesweeper/src/: App.css  App.tsx  index.css
minesweeper-tauri/vite-minesweeper/src/components/Cell/: Cell.module.css  Cell.tsx
minesweeper-tauri/vite-minesweeper/src/components/DurationCounter/: DurationCounter.tsx
minesweeper-tauri/vite-minesweeper/src/components/StatusDialog/: StatusDialog.module.css
minesweeper-tauri/vite-minesweeper/src/components/Wins/: Wins.tsx
minesweeper/src/: history.rs  lib.rs  main.rs  model.rs
minesweeper/src/model/: game.rs  mod.rs
src-tauri/: Cargo.toml  readme.md  tauri.conf.json
src-tauri/src/: commands.rs  game.rs  history.rs  lib.rs  main.rs
vite-minesweeper/: package-lock.json  package.json  readme.md  vite.config.ts
vite-minesweeper/src/: App.css  App.tsx  index.css
vite-minesweeper/src/common/: types.ts
vite-minesweeper/src/components/: Cell.module.css  Cell.tsx
vite-minesweeper/src/components/Cell/: Cell.module.css  Cell.tsx
vite-minesweeper/src/components/DurationCounter/: DurationCounter.tsx
vite-minesweeper/src/components/Modal/: Modal.module.css  Modal.tsx
vite-minesweeper/src/components/StatusDialog/: StatusDialog.module.css  StatusDialog.tsx
vite-minesweeper/src/components/Wins/: Wins.module.css  Wins.tsx
