cabal-version:       >=1.10

name:                minesweeper-game
version:             0.1.0.0
license:             MIT
author:              Darrell Roberts
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable minesweeper-game
  main-is:             Main.hs
  other-modules:       MineSweeper
  build-depends:       base >=4.13 && <4.14,
                       lens,
                       random,
                       mtl
  default-language:    Haskell2010
