[package]
name = "minesweeper-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk = { version = "0.5", package = "gtk4" }
relm4 = "0.5"
relm4-macros = "0.5"
relm4-components = "0.5"
minesweeper = { path = "../minesweeper" }
rmp = "0.8"
rmp-serde = "1"
rmpv = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
