[package]
name = "minesweeper-gui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
relm4 = "0.6"
relm4-components = "0.6"
minesweeper = { path = "../minesweeper" }
rmp = "0.8"
rmp-serde = "1"
rmpv = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
