[package]
name = "minesweeper-iced"
version = "0.1.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14", features = ["lazy", "tokio", "advanced"] }
minesweeper = { path = "../minesweeper" }

[package.metadata.deb]
maintainer = "Darrell Roberts"
copyright = "2024, Darrell Roberts"
license-file = "../LICENSE"
extended-description = """MineSweeper"""
section = "games"
priority = "optional"
assets = [
    [
        "target/release/minesweeper-iced",
        "usr/bin/",
        "755",
    ],
    [
        "../assets/io.github.darrellroberts.minesweeper.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "../assets/icons/hicolor/32x32/apps/io.github.darrellroberts.minesweeper.png",
        "usr/share/icons/hicolor/32x32/apps/",
        "644",
    ],
    [
        "../assets/icons/hicolor/128x128/apps/io.github.darrellroberts.minesweeper.png",
        "usr/share/icons/hicolor/128x128/apps/",
        "644",
    ],
]
