[package]
name = "app"
version = "0.1.0"
description = "Minsweeper Game in Tauri"
authors = ["you"]
license = "Apache-2.0 OR MIT"
repository = ""
default-run = "app"
edition = "2021"
# rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
minesweeper = { path = "../minesweeper" }
chrono = { version = "0.4", features = ["serde"] }
rmp = "0.8"
rmp-serde = "1"
rmpv = "1"
anyhow = "1"
tauri-plugin-fs = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
