[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[profile.release]
panic = "abort"
strip = true

[dependencies]
anyhow = "1"
rand = "0.9"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "1"
rmpv = "1"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.clap]
version = "4.5"
features = ["derive"]
